# cockpitdecks_xp

./: .gitignore  README.md  pyproject.toml
cockpitdecks_xp/: __init__.py
cockpitdecks_xp/buttons/representation/: __init__.py
cockpitdecks_xp/resources/: cmdlsnr.py  daytimeobs.py  oooi.py  stationobs.py
cockpitdecks_xp/resources/xppython3-plugins/: PI_CockpitdecksFMSBrowser.py
cockpitdecks_xp/simulators/: xplane.py
scripts/: link_fms_plugin.sh
